--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
+    "d3-axis": "^1.0.8",
+    "d3-interpolate": "^1.1.6",
+    "d3-scale": "^2.0.0",
+    "d3-selection": "^1.3.0",
     "express": "^4.16.2",
     "history": "^4.7.2",
     "jquery-bar-rating": "^1.2.2",
