--- a/package.json
+++ b/package.json
@@ -1,46 +1,43 @@
 {
-  "name": "allserach",
+  "name": "mom_package",
   "version": "1.0.0",
-  "description": "all search",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\" \"--history-api-fallback \" "
   },
-  "author": "onlyK",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "body-parser": "^1.18.2",
+    "babel-core": "^6.26.3",
+    "body-parser": "^1.18.3",
+    "concurrently": "^3.5.1",
     "d3-axis": "^1.0.8",
-    "d3-interpolate": "^1.1.6",
+    "d3-interpolate": "^1.2.0",
     "d3-scale": "^2.0.0",
     "d3-selection": "^1.3.0",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "history": "^4.7.2",
     "jquery-bar-rating": "^1.2.2",
     "json-stringify": "^1.0.0",
+    "moment": "^2.22.1",
     "mysql": "^2.15.0",
-    "npm": "^5.8.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-image-file": "^0.3.0",
-    "react-stringify": "^1.0.0",
-    "webpack": "^4.2.0",
-    "webpack-dev-server": "^3.1.1"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "concurrently": "^3.5.1",
-    "moment": "^2.22.0",
-    "nodemon": "^1.17.1",
+    "nodemon": "^1.17.5",
+    "npm": "^6.1.0",
     "parallax-js": "^3.1.0",
+    "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.4.0",
+    "react-image-file": "^0.3.0",
     "react-moment": "^0.7.0",
     "react-router-dom": "^4.2.2",
-    "react-router-native": "^4.2.0"
+    "react-router-native": "^4.2.0",
+    "react-stringify": "^1.0.0",
+    "webpack": "^4.10.0",
+    "webpack-dev-server": "^3.1.4"
   }
 }
